Fix body overflowing in global css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,6 +12,7 @@ html {
     background-color: #ddd;
     font-family: "Lato", sans-serif;
     color: var(--text-default);
+    min-height: 100%;
 }
 
 html.dark {
@@ -21,7 +22,6 @@ html.dark {
 body {
     margin: 0 auto;
     padding: 2rem;
-    min-height: 100svh;
     max-width: 60em;
 }
 
